and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [Unreleased]

## Added

- Adicionado qualidade para plantações: Plantas Precárias, Plantas e Plantas Premium. Plantas premium e precárias tem uma mudança em seu preço de 30%.
- Adicionado categorias para as plantações de fazendinha: Grão, Raiz, Vegetal, Fruta, Fruta Nobre e Especial.

## Fixed

- Corrigido os itens mágicos ainda aparecerem na loja para serem comprados, mesmo já tendo eles - Reportado por @mareys.

## [6.1.5] - 2025-12-17

### Fixed

- Corrigido erro ao colher plantações, por conta de silo cheio.

## [6.1.4] - 2025-12-04

### Changed

- O comando `/estatísticas fazendeiro` agora mostra a experiência da fazendinha - Sugerido por @kawajplemes7. 
- O comando `/loja comprar itens` agora mostra a descrição do que os itens fazem - Sugerido por @rafaelxd27.

### Fixed

- Corrigido o comando `/loja vender plantas` quando o silo possui 25 plantas diferentes.

## [6.1.3] - 2025-11-28

### Fixed

- Corrigido parcialmente o problema de plantas ficarem negativas no silo. Agora caso aconteça, um erro será gerado.

## [6.1.2] - 2025-11-06

### Fixed

- Corrigido o comando `/personalizar badges`, que falhava com usuários que possuem a badge de 5 anos com a Menhera.

## [6.1.1] - 2025-11-05

### Fixed

- Corrigido o comando `/trisal formar`, que dependendo do tamanho do nome do usuário, não funcionava.

## [6.1.0] - 2025-11-04

### Fixed

- Corrigido um problema no comando `/fazendinha feira comprar` que fazia com que o comando só não respondesse.

### Removed

- Removido os comandos filosofia e astolfo, para evitar que usuários mal intencionados consigam banir a Menhera com textos "falados pela Menhera".

## [6.0.0] - 2025-10-22

### Changed

- Atualizado versão do interpretador da Menhera.